--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="./assets/imagenes/logo.png">
     <style>@import url(https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;*,::after,::before{box-sizing:border-box;}@media (prefers-reduced-motion:no-preference){:root{scroll-behavior:smooth;}}body{margin:0;font-family:var(--bs-body-font-family);font-size:var(--bs-body-font-size);font-weight:var(--bs-body-font-weight);line-height:var(--bs-body-line-height);color:var(--bs-body-color);text-align:var(--bs-body-text-align);background-color:var(--bs-body-bg);-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent;}body{font-weight:200;letter-spacing:1px;}</style><link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css"></noscript>
-  <link rel="stylesheet" href="styles.c76135657822e819698b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c76135657822e819698b.css"></noscript></head>
+  <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
 
   <body>
     <app-root></app-root>
     <!-- "node_modules/bootstrap/dist/css/bootstrap.min.css"-->
-  <script src="runtime.902ecf8fb1df18b1d437.js" defer></script><script src="polyfills.593d11d9206fbdd2210b.js" defer></script><script src="scripts.21cdb1ccede537dc579d.js" defer></script><script src="main.bd96f823905d68c4a8e6.js" defer></script>
+  <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="scripts.js" defer></script><script src="main.js" defer></script>
   
 </body></html>
