--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <title>Portafolio Joel Ocampo</title>
-    <base href="/">
+    <base href="/WebPrivado">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="./assets/imagenes/logo.png">
     <style>@import url(https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;*,::after,::before{box-sizing:border-box;}@media (prefers-reduced-motion:no-preference){:root{scroll-behavior:smooth;}}body{margin:0;font-family:var(--bs-body-font-family);font-size:var(--bs-body-font-size);font-weight:var(--bs-body-font-weight);line-height:var(--bs-body-line-height);color:var(--bs-body-color);text-align:var(--bs-body-text-align);background-color:var(--bs-body-bg);-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:transparent;}body{font-weight:200;letter-spacing:1px;}</style><link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./assets/stylesheets/bootstrap.min.css"></noscript>
