--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
 
   <body>
-    <app-root></app-root>
+    <app-root>Cargando, por favor espera...</app-root>
     <!-- "node_modules/bootstrap/dist/css/bootstrap.min.css"-->
   <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="scripts.js" defer></script><script src="main.js" defer></script>
   
